fixed checkbox padding and alignment of table borders

--- a/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/components/organisms/table/TableHeaderRow.module.css
+++ b/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/components/organisms/table/TableHeaderRow.module.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: stretch;
   background-color: var(--purple-500);
+  border: 2px solid var(--purple-500);
   border-radius: 20px 20px 0 0;
   min-height: 48px;
 
